fix scrollbar

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -9,6 +9,9 @@
   font-style: normal;
   font-weight: 400;
 }
+html {
+  scrollbar-width: none;
+}
 body {
   max-width: 1500px;
   margin: 0 auto;
